<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".autorization.Authorization">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/element_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_alignParentBottom="true"/>

        <EditText
            android:id="@+id/email_address_edit_t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="150dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:visibility="gone" />

        <EditText
            android:id="@+id/password_edit_t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_address_edit_t"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:visibility="gone" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_edit_t"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:hint="@string/password_hint"
            android:onClick="signIn"
            android:text="@string/sign_in"
            android:visibility="gone" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_in_button"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password_hint"
            android:onClick="signUp"
            android:text="@string/sign_up"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_below="@id/favouritesButton"

            android:onClick="imageButtonListener"
            android:visibility="gone"
            app:srcCompat="@drawable/person"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/email_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/nameUserEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_View"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/enter_user_name"
            android:inputType="textPersonName"
            android:visibility="gone" />

        <Button
            android:id="@+id/addNameUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameUserEditText"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:onClick="addDisplayName"
            android:text="@string/add_user_name"
            android:visibility="visible"
            tools:visibility="gone" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addNameUserButton"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="100dp"
            android:onClick="signOut"
            android:text="@string/exit_button"
            android:visibility="gone" />

        <Button
            android:id="@+id/favouritesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:onClick="favouritesButtonListener"
            android:text="@string/fav_uni"
            android:visibility="gone" />

        <TextView
            android:id="@+id/nameUserTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_View"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

