<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/uni_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:onClick="uniListButtonActionListener"
            android:text="@string/universities_button" />

        <Button
            android:id="@+id/uni_filter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uni_list_button"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:onClick="filterButtonActionListener"
            android:text="@string/choose_uni" />

        <Button
            android:id="@+id/uni_recommend_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uni_filter_button"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:onClick="professionButtonActionListener"
            android:text="@string/choose_profession" />

        <include
            layout="@layout/element_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

